--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@ body {
     background-repeat: no-repeat;
     font-family: 'Black Han Sans', sans-serif;
     background-attachment: fixed;
+    margin: 0 auto;
 }
 
 .pantalla {
@@ -40,9 +41,10 @@ header {
 h1 {
     color: white;
     text-align: center;
-    font-size: 6vw;
-    padding: 1.2em;
-    position: relative;
+    background-position: center;
+    font-size: 50px;
+    margin: 70px 600px;
+    padding: 250px 70px 200px 70px;
 }
 
 #boton {
@@ -226,49 +228,6 @@ h1 {
     background-color:rgb(206, 218, 206); 
 }
 
-
-
-@media (max-width: 592px) {
-
-    body {
-        background-image: url(images/fondo-movil.png);
-    }
-
-
-    #boton {
-        font-size: 4vw;
-    }
-    
-    #mejores-peliculas {
-        font-size: 4vw;
-    }
-
-    .pFunciones{
-        font-size: 4vw;
-    }
-
-    .funciones{
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 0.5em;
-    }
-
-    .input{
-        font-size: 2.5vw;
-    }
-
-    .ordenarBuscar{
-        padding: 0.5em;
-    }
-
-    #poster{
-        width: 30vw;
-        height: auto;
-    }
-
-    .parrafos{
-        font-size: 3.5vw;
-    }
-
+@media (max-width: 592px){
 
 }
